--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   "scripts": {
     "ng": "./node_modules/.bin/ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod",
     "test": "ng test",
+    "test-local": "ng test --browsers=Chrome --karmaConfig=karma.conf.local.js",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
