--- a/angular.json
+++ b/angular.json
@@ -87,7 +87,7 @@
             "main": "src/test.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
-            "karmaConfig": "karma.conf.js",
+            "karmaConfig": "karma.conf.cicd.js",
             "assets": [
               "src/favicon.ico",
               "src/assets"
