Split dependency installation and test command

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,9 @@ steps:
 
 - script: |
     npm install
+  displayName: 'Install dependencies'
+
+- script: |
     npm test
   displayName: 'run unit and integration tests'
 
