--- a/angular.json
+++ b/angular.json
@@ -60,7 +60,8 @@
                   "maximumWarning": "6kb",
                   "maximumError": "10kb"
                 }
-              ]
+              ],
+              "baseHref": "./build-artefacts"
             }
           }
         },
