--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,7 +48,9 @@ steps:
     inlineScript: |
         $accountNameExists = az storage account check-name --name mathdojouibuild$(Build.SourceBranchName) --subscription 5594cd6c-b674-4323-8517-5e859a399468 | ConvertFrom-Json
         If ($accountNameExists.nameAvailable) {
-          az storage account create --name mathdojouibuild$(Build.SourceBranchName) --kind StorageV2 --location uksouth --resource-group math-dojo-hzprod-web-ui
+
+        $accountCreateCommandOutput  = az storage account create --name mathdojouibuild$(Build.SourceBranchName) --kind StorageV2 --location uksouth --resource-group math-dojo-hzprod-web-ui --sku Standard_RAGRS | ConvertFrom-Json
+        Write-Output $accountCreateCommandOutput
 
           $accountCreated = False
 
