Add chrome driver for selenium to path

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,10 @@ steps:
     npm test
   displayName: 'run unit and integration tests'
 
+- powershell: |
+   echo "##vso[task.prependpath]$env:CHROMEWEBDRIVER"
+  displayName: Adds ChromeWebDriver for Selenium to PATH
+
 - script: |
     npm run-script e2e
     npm run-script lint
