Echo chromedrive path location

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,7 @@ steps:
   displayName: 'run unit and integration tests'
 
 - script: |
-    ##vso[task.prependpath]$env:CHROMEWEBDRIVER
+    echo "$env:CHROMEWEBDRIVER"
     npm run-script e2e
     npm run-script lint
   displayName: 'run end-to-end tests and linting'
