Use .bat syntax to add chromedriver to path

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,8 @@ steps:
   displayName: 'run unit and integration tests'
 
 - script: |
-    echo "$env:ChromeWebDriver"
+    echo %CHROMEWEBDRIVER%
+    ##vso[task.prependpath]%CHROMEWEBDRIVER%
     npm run-script e2e
     npm run-script lint
   displayName: 'run end-to-end tests and linting'
