--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,8 +39,17 @@ steps:
 
 - script: |
     npm run-script e2e
+  displayName: 'run end-to-end tests'
+  condition: |
+    or(
+      eq(variables['Build.Reason'], 'PullRequest'),
+      eq(variables['Build.SourceBranch'], 'refs/heads/master'),
+      eq(variables['Build.SourceBranch'], 'refs/heads/develop')
+    )
+
+- script: |
     npm run-script lint
-  displayName: 'run end-to-end tests and linting'
+  displayName: 'run linting'
   condition: |
     or(
       eq(variables['Build.Reason'], 'PullRequest'),
