--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,8 @@
             ],
             "scripts": [
               "node_modules/@webcomponents/custom-elements/custom-elements.min.js",
-              "node_modules/@clr/icons/clr-icons.min.js"
+              "node_modules/@clr/icons/clr-icons.min.js",
+              "node_modules/@math-dojo/facebook_sdk.js"
             ]
           },
           "configurations": {
