--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
-    "@clr/angular": "^2.3.4",
+    "@clr/angular": "^3.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2",
-    "@clr/ui": "2.3.4",
-    "@clr/icons": "2.3.4",
-    "@webcomponents/custom-elements": "^1.0.0"
+    "@clr/ui": "3.0.1",
+    "@clr/icons": "3.0.1",
+    "@clr/core": "^3.0.0",
+    "@webcomponents/webcomponentsjs": "^2.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.6",
