--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "ng serve",
+            "name": "serve web app",
             "type": "chrome",
             "request": "launch",
             "preLaunchTask": "npm: start",
