--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
   "homepage": "https://github.com/math-dojo/single-page-web-app#readme",
   "scripts": {
     "ng": "./node_modules/.bin/ng",
-    "start": "ng serve",
+    "start-mock-backends": "json-server --port 4201 --watch ./mock-backends/db.json",
+    "serve-webapp": "ng serve",
+    "start": "concurrently \"npm run start-mock-backends\" \"npm run serve-webapp\"",
     "build": "ng build --prod",
     "test": "ng test",
     "test-local": "ng test --browsers=Chrome --karmaConfig=karma.conf.local.js",
     "lint": "ng lint",
-    "e2e-local": "ng e2e",
-    "e2e": "ng e2e --webdriverUpdate=false"
+    "e2e-local": "concurrently \"npm run start-mock-backends\" \"ng e2e\"",
+    "e2e": "concurrently \"npm run start-mock-backends\" \"ng e2e --webdriverUpdate=false\""
   },
   "private": true,
   "dependencies": {
@@ -49,8 +51,10 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
+    "concurrently": "^5.1.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
+    "json-server": "^0.16.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
