--- a/package.json
+++ b/package.json
@@ -34,13 +34,15 @@
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
     "@clr/angular": "^3.0.1",
+    "@clr/core": "^3.0.0",
+    "@clr/icons": "3.0.1",
+    "@clr/ui": "3.0.1",
+    "@types/mathjax": "0.0.36",
+    "@webcomponents/webcomponentsjs": "^2.0.0",
+    "mathjax": "^3.0.5",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "@clr/ui": "3.0.1",
-    "@clr/icons": "3.0.1",
-    "@clr/core": "^3.0.0",
-    "@webcomponents/webcomponentsjs": "^2.0.0"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.6",
