--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/mathjax": "0.0.36",
     "@webcomponents/webcomponentsjs": "^2.4.3",
     "mathjax": "^3.0.5",
+    "ng-katex": "^2.0.3",
     "rxjs": "^6.5.5",
     "tslib": "^1.13.0",
     "zone.js": "^0.10.3"
