--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ trigger:
 - master
 - develop
 - rl* # release branches to be built should be named rl[insertSemverHere]
-- ft* # feature branches to be built should be named ft[insertGithubIssueNumberHere]
+# - ft* # feature branches to be built should be named ft[insertGithubIssueNumberHere]
 - hf* # hotfix branches to be built should be named hf[insertGithubIssueNumberHere]
 
 pool:
