--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.12.47",
+    "@types/sinon": "^9.0.4",
     "codelyzer": "^5.2.2",
     "concurrently": "^5.2.0",
     "jasmine-core": "~3.4.0",
@@ -64,6 +65,7 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "~5.4.0",
+    "sinon": "^9.0.2",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "3.7.5"
