--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,16 @@ variables:
     appName: "pr$(System.PullRequest.PullRequestNumber)"
   ${{ if not(eq(variables['Build.Reason'], 'PullRequest')) }}:
     appName: "$(Build.SourceBranchName)"
+  ${{ if eq(variables['Build.SourceBranchName'], 'master') }}: # only works if you have a master branch
+    envName: "preproduction"
+  ${{ if eq(variables['Build.SourceBranchName'], 'develop') }}: # only works if you have a develop branch
+    envName: "nonproduction"
+  ${{ if contains(variables['Build.SourceBranchName'], 'ft') }}: # only works if you have a feature branch
+    envName: "nonproduction"
+  ${{ if contains(variables['Build.SourceBranchName'], 'merge') }}: # only works if you have a PR branch
+    envName: "nonproduction"
+  ${{ if contains(variables['Build.SourceBranchName'], 'rl') }}: # only works if you have a release branch
+    envName: "production"
 
 steps:
 - task: NodeTool@0
@@ -64,7 +74,7 @@ steps:
     )
 
 - script: |
-    npm run-script build
+    npm run-script build -- --configuration=$(envName)
   displayName: 'npm build'
 
 - task: CopyFiles@2
