--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,8 @@
     },
     "files.watcherExclude": {
         "**/node_modules/*/**": true
+    },
+    "editor.codeActionsOnSave": {
+      "source.fixAll.tslint": true
     }
 }
