--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -38,7 +38,8 @@
             "protocol": "inspector",
             "args": [
                 "${workspaceFolder}/e2e/protractor.conf.js"
-            ]
+            ],
+            "preLaunchTask": "npm: start",
         }
     ]
 }
