--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test-local": "ng test --browsers=Chrome --karmaConfig=karma.conf.local.js",
     "lint": "ng lint",
     "e2e-local": "concurrently --kill-others --success first \"npm run start-mock-backends\" \"ng e2e\"",
-    "e2e": "concurrently --kill-others --success first \"npm run start-mock-backends\" \"ng e2e --webdriverUpdate=false\""
+    "e2e": "concurrently --kill-others --success first \"npm run start-mock-backends\" \"ng e2e --webdriverUpdate=false\"",
+    "postinstall": "ngcc"
   },
   "private": true,
   "dependencies": {
@@ -46,7 +47,7 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.8",
+    "@angular-devkit/build-angular": "^0.1000.8",
     "@angular/cli": "^9.1.8",
     "@angular/compiler-cli": "^9.1.11",
     "@angular/language-service": "^9.1.11",
