--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
     "@angular/platform-browser-dynamic": "^10.0.14",
     "@angular/router": "^10.0.14",
     "@clr/angular": "^4.0.1",
-    "@clr/core": "^3.1.3",
+    "@clr/core": "^4.0.1",
     "@clr/icons": "4.0.1",
     "@clr/ui": "4.0.1",
     "@types/mathjax": "0.0.36",
+    "@webcomponents/custom-elements": "^1.4.2",
     "@webcomponents/webcomponentsjs": "^2.4.3",
     "mathjax": "^3.0.5",
     "ng-katex": "^2.0.3",
