Add enforce fail on error from update task

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,6 +58,7 @@ steps:
       eq(variables['Build.SourceBranch'], 'refs/heads/master'),
       eq(variables['Build.SourceBranch'], 'refs/heads/develop')
     )
+  failOnStderr: true
 
 - script: |
     npm run-script e2e
