--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "@angular/platform-browser": "^10.0.14",
     "@angular/platform-browser-dynamic": "^10.0.14",
     "@angular/router": "^10.0.14",
-    "@clr/angular": "^4.0.1",
+    "@clr/angular": "^4.0.2",
     "@clr/core": "^4.0.1",
-    "@clr/icons": "4.0.1",
-    "@clr/ui": "4.0.1",
+    "@clr/icons": "^4.0.2",
+    "@clr/ui": "^4.0.2",
     "@types/mathjax": "0.0.36",
     "@webcomponents/custom-elements": "^1.4.2",
     "@webcomponents/webcomponentsjs": "^2.4.3",
