--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/sinon": "^9.0.4",
     "codelyzer": "^6.0.0",
     "concurrently": "^5.2.0",
+    "gaxios": "^3.2.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "json-server": "^0.16.1",
