--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "@angular/platform-browser": "^11.2.13",
     "@angular/platform-browser-dynamic": "^11.2.13",
     "@angular/router": "^11.2.13",
+    "@cds/core": "^5.0.0",
     "@clr/angular": "^5.1.1",
-    "@clr/core": "^4.0.1",
     "@clr/icons": "^5.1.1",
     "@clr/ui": "^5.1.1",
     "@types/mathjax": "0.0.36",
@@ -45,8 +45,7 @@
     "ng-katex": "^2.0.3",
     "rxjs": "^6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "^0.10.3",
-    "@cds/core": "^5.0.0"
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1102.12",
