--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/mathjax": "0.0.36",
     "@webcomponents/custom-elements": "^1.4.2",
     "@webcomponents/webcomponentsjs": "^2.4.3",
+    "axios": "^0.21.1",
     "mathjax": "^3.0.5",
     "ng-katex": "^2.0.3",
     "rxjs": "^6.5.5",
@@ -58,7 +59,6 @@
     "@types/sinon": "^9.0.4",
     "codelyzer": "^6.0.0",
     "concurrently": "^5.2.0",
-    "gaxios": "^3.2.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "json-server": "^0.16.1",
