--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,10 +49,11 @@ steps:
       if not exist "C:\Program Files (x86)\Google\Chrome" mkdir "C:\Program Files (x86)\Google\Chrome"
       mklink /D "C:\Program Files (x86)\Google\Chrome\Application" "C:\Program Files\Google\Chrome\Application"
 
-      $targetWebdriverUpdateVersion = (Get-Item 'C:\Program Files (x86)\Google\Chrome\Application\chrome.exe').VersionInfo.ProductVersion
-      echo "Attempting to use Webdriver for Chrome v$targetWebdriverUpdateVersion"
+      for /f %i in ('pwsh -Command "(Get-Item 'C:\Program Files (x86)\Google\Chrome\Application\chrome.exe').VersionInfo.ProductVersion"') do set targetWebdriverUpdateVersion=%i
 
-      ./node_modules/.bin/webdriver-manager update --versions.chrome=$targetWebdriverUpdateVersion
+      echo "Attempting to use Webdriver for Chrome v%targetWebdriverUpdateVersion%"
+
+      ./node_modules/.bin/webdriver-manager update --versions.chrome=%targetWebdriverUpdateVersion%
     displayName: "add chrome driver to node directory"
     condition: |
       or(
