--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.2.13",
-    "@angular/common": "^11.2.13",
-    "@angular/compiler": "^11.2.13",
-    "@angular/core": "^11.2.13",
-    "@angular/forms": "^11.2.13",
-    "@angular/platform-browser": "^11.2.13",
-    "@angular/platform-browser-dynamic": "^11.2.13",
-    "@angular/router": "^11.2.13",
+    "@angular/animations": "^12.0.4",
+    "@angular/common": "^12.0.4",
+    "@angular/compiler": "^12.0.4",
+    "@angular/core": "^12.0.4",
+    "@angular/forms": "^12.0.4",
+    "@angular/platform-browser": "^12.0.4",
+    "@angular/platform-browser-dynamic": "^12.0.4",
+    "@angular/router": "^12.0.4",
     "@cds/core": "^5.0.0",
     "@clr/angular": "^5.1.1",
     "@clr/icons": "^5.1.1",
@@ -45,13 +45,13 @@
     "ng-katex": "^2.0.3",
     "rxjs": "^6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "^0.10.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.12",
-    "@angular/cli": "^11.2.12",
-    "@angular/compiler-cli": "^11.2.13",
-    "@angular/language-service": "^11.2.13",
+    "@angular-devkit/build-angular": "^12.0.4",
+    "@angular/cli": "^12.0.4",
+    "@angular/compiler-cli": "^12.0.4",
+    "@angular/language-service": "^12.0.4",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.12.47",
@@ -71,6 +71,6 @@
     "sinon": "^9.0.2",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
-    "typescript": "4.1.5"
+    "typescript": "4.2.4"
   }
 }
