--- a/package.json
+++ b/package.json
@@ -49,6 +49,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^12.0.4",
+    "@angular-eslint/builder": "12.1.0",
+    "@angular-eslint/eslint-plugin": "12.1.0",
+    "@angular-eslint/eslint-plugin-template": "12.1.0",
+    "@angular-eslint/schematics": "12.1.0",
+    "@angular-eslint/template-parser": "12.1.0",
     "@angular/cli": "^12.0.4",
     "@angular/compiler-cli": "^12.0.4",
     "@angular/language-service": "^12.0.4",
@@ -56,9 +61,11 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.12.47",
     "@types/sinon": "^9.0.4",
+    "@typescript-eslint/eslint-plugin": "4.23.0",
+    "@typescript-eslint/parser": "4.23.0",
     "axios": "^0.21.1",
-    "codelyzer": "^6.0.0",
     "concurrently": "^5.2.0",
+    "eslint": "^7.26.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "json-server": "^0.16.1",
@@ -70,7 +77,6 @@
     "protractor": "~7.0.0",
     "sinon": "^9.0.2",
     "ts-node": "~7.0.0",
-    "tslint": "~6.1.0",
     "typescript": "4.2.4"
   }
 }
