--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,7 +52,7 @@ steps:
       echo "Getting webdriver for Chrome version"
       pwsh -Command "echo $(Get-Item 'C:\Program Files (x86)\Google\Chrome\Application\chrome.exe').VersionInfo.ProductVersion"
 
-      pwsh -Command "./node_modules/.bin/webdriver-manager update --versions.chrome= $(Get-Item 'C:\Program Files (x86)\Google\Chrome\Application\chrome.exe').VersionInfo.ProductVersion"
+      pwsh -Command "./node_modules/.bin/webdriver-manager update --versions.chrome $(Get-Item 'C:\Program Files (x86)\Google\Chrome\Application\chrome.exe').VersionInfo.ProductVersion"
 
     displayName: "add chrome driver to node directory "
     condition: |
